--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/Scriptzza.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.9.0.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\commons-beanutils-1.9.0.jar
+file.reference.commons-collections-3.2.1.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\commons-logging-1.1.1.jar
 file.reference.fontawesomefx-8.6.jar=C:\\Users\\Santiago\\Downloads\\fontawesomefx-8.6.jar
+file.reference.groovy-all-2.4.3.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\groovy-all-2.4.3.jar
+file.reference.itext-2.1.7.js4.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\itext-2.1.7.js4.jar
+file.reference.jasperreports-6.2.0.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\jasperreports-6.2.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Santiago\\Downloads\\jcalendar-1.4.jar
 file.reference.jfoenix-8.0.7.jar=C:\\Users\\Santiago\\Downloads\\jfoenix-8.0.7.jar
+file.reference.png-encoder-1.5.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\png-encoder-1.5.jar
+file.reference.poi-3.10.1.jar=C:\\Users\\Santiago\\Documents\\Administracion del tiempo\\Plugins JasperReports\\Jar\\poi-3.10.1.jar
 file.reference.sqlite-jdbc-3.23.1.jar=C:\\Users\\Santiago\\Downloads\\sqlite-jdbc-3.23.1.jar
 includes=**
 jar.compress=false
@@ -37,7 +47,17 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.7.jar}:\
     ${file.reference.fontawesomefx-8.6.jar}:\
     ${file.reference.sqlite-jdbc-3.23.1.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.commons-beanutils-1.9.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-2.4.3.jar}:\
+    ${file.reference.itext-2.1.7.js4.jar}:\
+    ${file.reference.jasperreports-6.2.0.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
